<resources>
    <string name="app_name">Stock Exchange Terminal</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_scanner">Scanner</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_new_order">New order</string>
    <string name="turn_on_flashlight">Flash On</string>
    <string name="turn_off_flashlight">Flash Off</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="type_operation">Type</string>
    <string name="label_price">Price</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_amount">Amount</string>
    <string name="tab.chart">Chart</string>
    <string name="tab.buy">Buy</string>
    <string name="tab.sell">Sell</string>
    <string name="tab.deal">Deals</string>
    <string name="tab.my_order">My Orders</string>
    <string name="tab.my_deal">My Deals</string>
    <string name="enter_public_key">enter public key</string>
    <string name="enter_private_key">enter private key</string>
    <string name="public_key">Public key</string>
    <string name="private_key">Private key</string>
    <string name="api.description">Key values can be obtained after authorization on the exchange website in the settings: My Account> Profile> Connection API and mobile application> Show</string>
    <string name="about">About</string>
    <string name="donations">Donations</string>
    <string name="button_label_buy">BUY</string>
    <string name="button_label_sell">SELL</string>
    <string name="delete_entry">Delete entry</string>
    <string name="confirm_delete_order">Are you sure you want to delete this entry:</string>
    <string name="label_available">Available</string>
    <string name="failure_balance">unable to load account balances</string>
    <string name="msg_donation">If you like the application and want to thank the developer, you can do it here by making a transfer to any of the following wallet</string>
    <string name="wallet_address_copied">wallet address copied</string>
    <string name="server_request_error">server request error:</string>
    <string name="scan_cancelled">Cancelled</string>
    <string name="flash">flash</string>
    <string name="pin.reset">pin reset</string>
    <string name="pin.enter">enter PIN</string>
    <string name="pin.wrong">wrong code</string>
    <string name="pin.correct">access granted</string>
    <string name="pin.4.8">(from 4 to 8 digits)</string>
    <string name="confirmation_order_title">Confirmation</string>
    <string name="confirmation.order.operation.buy">buy</string>
    <string name="confirmation.order.operation.sell">sell</string>
    <string name="confirmation.order.price">price</string>
    <string name="confirmation.order.amount">amount</string>
    <string name="error.order.amount.zero">the transaction amount must be greater than 0</string>
    <string name="detail_balance">Balance</string>
    <string name="about.agreement">The program is delivered  \"as is\". No warranty of any kind is provided or implied.  You use this software at your own risk.  The author will not be liable for loss of data, loss, lost profits or any other type of loss when using this software .  At the same time, the Author guarantees that during the development of the program they did not and will not use any parts of the program code carrying destructive actions or collecting information about the user without his knowledge.</string>
    <string name="error_order_auth">To perform purchase and sale operations, as well as to display information about open and executed user orders, you must pre-authorize using public and private keys. Their values can be specified in the settings.</string>
    <string name="about.subtitle">implementation of API trading platform \"BTC TRADE UA\"</string>
    <string name="api.error">API error:</string>
    <string name="auth.error">unsuccessful authorization</string>
    <string name="order.delete.success">The order is deleted.</string>
    <string name="order.delete.error">Order deletion error</string>
    <string name="auth.check.keys">verify the key values specified in the application configuration</string>
    <string name="switch.sort.price">Sort the listing markets</string>
    <string name="chart.empty">No chart data available.</string>
    <string name="switch.use.rate">Perform price calculation in USD</string>
    <string name="key.copy.to.clipboard">the key value is placed on the clipboard</string>
    <string name="rate.usduah">Value of the USD / UAH exchange rate</string>
    <string name="header_markets">List of markets</string>
    <string name="header.keys">API Keys</string>
    <string name="value.not.specified">value is not specified</string>
    <string name="markets.uah.olnly">Only UAH Markets</string>
    <string name="password">Password</string>
    <string name="password.new">new password</string>
    <string name="password.confirm">confirm password</string>
    <string name="password.current">current password</string>
    <string name="password.change">Change Password</string>
    <string name="password.enter.to.proceed">Enter password to proceed</string>
    <string name="pin.confirm">confirm the PIN</string>
    <string name="pin.different">the entered value is different, please re-enter</string>
    <string name="pin.reset.confirm">The PIN value will be reset and the public and private keys will be removed from the device.</string>
    <string name="pin.reset.title">Reset the PIN</string>
    <string name="pin.set">set a PIN</string>
    <string name="key.input.message">Scan the QR code, type or paste the value of the key from the clipboard. The value below will be encrypted while saving.</string>
    <string name="key.scan">Scan</string>
    <string name="key.past">Past</string>
    <string name="key.value">key value</string>
    <string name="key.removal">Deleting keys</string>
    <string name="key.removal.confirm">Are you sure you want to delete the key values stored on the device?</string>
    <string name="key.removal.summary">Touch to delete the key values stored on the device.</string>
    <string name="key.length.error">a 64-character string is expected</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_alert_notifications">Alert notifications</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_title_led">Indicator light</string>
    <string name="pref_header_watcher">Watcher</string>
    <string name="pref_watcher_launch_frequency">Launch frequency</string>
    <string name="pref_watcher">Watcher</string>
    <string name="pref_watcher_price">Price monitoring</string>
    <string name="pref_watcher_order">Monitoring of orders</string>
    <string name="menu_authorization">Authorization</string>
    <string name="upper_limit">upper limit</string>
    <string name="current_price">current price</string>
    <string name="lower_limit">lower limit</string>
    <string name="alert_active">active</string>
    <string name="add_alert">Add an alert</string>
    <string name="edit_alert">Change alert</string>
    <string name="main_whitelist">Activity control</string>
    <string name="switch_watcher_price_summary">tracking the event of the market reaching the price within the established limits</string>
    <string name="switch_watcher_order_summary">tracking the event of closing a user\'s orders</string>
    <string name="switch_watcher_summary">provides an opportunity in the background to monitor events on the exchange</string>
    <string-array name="watcher_frequency">
        <item>every 5 minutes</item>
        <item>every 10 minutes</item>
        <item>every 15 minutes</item>
        <item>every 20 minutes</item>
        <item>every 30 minutes</item>
    </string-array>
    <string name="apply_widget">apply</string>
    <string name="market_select_required">select the required market</string>
</resources>