<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_alert"
        android:title="@string/pref_title_alert_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_alert"
        android:key="notifications_alert_vibrate"
        android:title="@string/pref_title_vibrate" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_alert"
        android:key="notifications_alert_led"
        android:title="@string/pref_title_led" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_alert"
        android:key="notifications_alert_sound"
        android:title="@string/pref_title_sound" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_alert_sound"
        android:key="notifications_alert_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->

</PreferenceScreen>
