<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="basilisk.stockexchangeterminal.activity.NewOrderActivity">
<!--android:background="@color/primary_light"-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image_icon"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:adjustViewBounds="false"
                            android:contentDescription="coin icon"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dash" />

                        <TextView
                            android:id="@+id/text_pair"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="DASH/UAH"
                            android:textSize="14sp"
                            tools:text="DASH/UAH" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="6"
                    app:contentPadding="4dp">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_sell"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sell" />

                        <RadioButton
                            android:id="@+id/radio_buy"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/buy" />

                    </RadioGroup>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:layout_weight="7"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_layout_available"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:enabled="false">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/text_available"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:hint="@string/label_available"
                            android:inputType="numberDecimal"
                            android:textAlignment="textEnd" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/text_bid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:hint="bid"
                                android:textAlignment="textEnd"
                                android:textColor="@color/color_bid" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/text_ask"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:hint="ask"
                                android:textAlignment="textEnd"
                                android:textColor="@color/color_ask" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_layout_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/text_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:focusedByDefault="true"
                            android:hint="@string/label_price"
                            android:inputType="numberDecimal"
                            android:textAlignment="textEnd" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_layout_current"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/text_volume"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:hint="@string/label_quantity"
                            android:inputType="numberDecimal"
                            android:textAlignment="textEnd" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_layout_amount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/text_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:hint="@string/label_amount"
                            android:inputType="numberDecimal"
                            android:textAlignment="textEnd" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:visibility="invisible">

                <!--android:drawableLeft="@drawable/ic_action_add"-->
                <Button
                    android:id="@+id/button_submit"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_save"
                    android:elevation="1dp"
                    android:enabled="false"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/button_cancel"
                    style="@android:style/Widget.Holo.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_cancel"
                    android:elevation="1dp"
                    android:text="@string/cancel" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>