<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/image_icon"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="false"
                            android:contentDescription="coin icon"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter"
                            android:src="@drawable/dash" />

                        <TextView
                            android:id="@+id/text_pair"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="TextView"
                            android:textSize="18sp"
                            tools:text="DASH/UAH" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/price_type"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:visibility="gone" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="3"
                    app:contentPadding="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_layout_height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/text_higher"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:hint="@string/upper_limit"
                                android:inputType="numberDecimal"
                                android:textAlignment="textEnd" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_layout_current"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/text_current"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:enabled="true"
                                android:hint="@string/current_price"
                                android:textAlignment="textEnd" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_layout_lower"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/text_lower"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:hint="@string/lower_limit"
                                android:inputType="numberDecimal"
                                android:textAlignment="textEnd" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/seekbar_delta"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:max="10"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/text_delta"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        tools:text="10%" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                app:contentPadding="4dp">

                <Switch
                    android:id="@+id/switch_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:checked="true"
                    android:text="@string/alert_active" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>